update code chat

--- a/webview-chat/src/app/container/chat-container/chat-container.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-container.component.html
@@ -1,9 +1,9 @@
 <div class="chat-container">
-  <app-chat-header></app-chat-header>
+  <app-chat-header class="chat-container-header"></app-chat-header>
 
-  <app-message-list [messages]="messages" [isTyping]="isTyping">
+  <app-message-list class="chat-container-message-list" [messages]="messages" [isTyping]="isTyping">
   </app-message-list>
 
-  <app-message-input [isLoading]="isTyping" (messageSent)="onMessageSent($event)">
+  <app-message-input class="chat-container-message-input" [isLoading]="isTyping" (messageSent)="onMessageSent($event)">
   </app-message-input>
 </div>
