--- a/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
+++ b/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
@@ -5,7 +5,7 @@
 
     <div *ngIf="isTyping" class="typing-indicator">
       <div class="typing-content">
-        <span class="typing-text">El asistente está escribiendo</span>
+        <span class="typing-text">Orasis is thinking</span>
         <span class="loading-dots"></span>
       </div>
     </div>
