--- a/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="chat-header">
-  <span class="chat-title">CHAT</span>
+  <span class="chat-title">Chat</span>
   <div class="header-actions">
     <button mat-icon-button (click)="onNewChat()">
       <mat-icon>add</mat-icon>
