update chat component

--- a/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
@@ -2,16 +2,16 @@
   <span class="chat-title">Chat</span>
   <div class="header-actions">
     <button mat-icon-button (click)="onNewChat()">
-      <mat-icon>add</mat-icon>
+      <ng-icon name="matAddOutline" />
     </button>
     <button mat-icon-button (click)="onHistory()">
-      <mat-icon>history</mat-icon>
+      <ng-icon name="matHistoryOutline" />
     </button>
     <button mat-icon-button (click)="onSettings()">
-      <mat-icon>settings</mat-icon>
+     <ng-icon name="matSettingsOutline" />
     </button>
     <button mat-icon-button (click)="onClose()">
-      <mat-icon>close</mat-icon>
+     <ng-icon name="matCloseOutline" />
     </button>
   </div>
 </mat-toolbar>
