--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -6,21 +6,31 @@
       </textarea>
     </mat-form-field>
 
-    <button matMiniFab class="send-button" [disabled]="!messageText.trim() || isLoading"
-      (click)="sendMessage()">
+
+  </div>
+  <mat-card-actions>
+    <select class="select-models-field" [disabled]="!messageText.trim() || isLoading">
+      @for (food of foods; track food) {
+      <option [value]="food.value">{{food.viewValue}}</option>
+      }
+    </select>
+    <button class="active-microphone" matMiniFab (click)="activeMicrophone()">
+      <ng-icon name="matMicOutline" />
+    </button>
+    <button matMiniFab class="send-button" [disabled]="!messageText.trim() || isLoading" (click)="sendMessage()">
       @if (!isLoading) {
-        <ng-icon name="matSendOutline"/>
+      <ng-icon name="matSendOutline" />
       }
       @if (isLoading) {
-        <ng-icon class="loading-icon" name="matHourglassEmptyOutline" />
+      <ng-icon class="loading-icon" name="matHourglassEmptyOutline" />
       }
     </button>
-  </div>
+  </mat-card-actions>
 
   @if (isLoading) {
-    <div class="input-status">
-      <span class="status-text typing-animation">Waiting for response</span>
-      <span class="loading-dots"></span>
-    </div>
+  <div class="input-status">
+    <span class="status-text typing-animation">Waiting for response</span>
+    <span class="loading-dots"></span>
+  </div>
   }
 </mat-card>
