--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -9,12 +9,13 @@
 
   </div>
   <mat-card-actions>
-    <select class="select-models-field" [disabled]="!messageText.trim() || isLoading">
-      @for (food of foods; track food) {
-      <option [value]="food.value">{{food.viewValue}}</option>
+    <select class="select-models-field" [disabled]="isLoading">
+      @for (model of this.chatStore.models()?.models; track model) {
+      <option [value]="model.model">{{model.name}}</option>
       }
     </select>
-    <button class="active-microphone" matMiniFab (click)="activeMicrophone()">
+    <button [class]="{'active-microphone': true,  'is-active': this.isActiveMicrophone }" matMiniFab
+      (click)="activeMicrophone()" [disabled]="isLoading">
       <ng-icon name="matMicOutline" />
     </button>
     <button matMiniFab class="send-button" [disabled]="!messageText.trim() || isLoading" (click)="sendMessage()">
@@ -30,7 +31,6 @@
   @if (isLoading) {
   <div class="input-status">
     <span class="status-text typing-animation">Waiting for response</span>
-    <span class="loading-dots"></span>
   </div>
   }
 </mat-card>
