--- a/webview-chat/src/app/container/chat-container/message/message.component.html
+++ b/webview-chat/src/app/container/chat-container/message/message.component.html
@@ -1,5 +1,5 @@
-<div class="message-container" [class.user-message]="message.type === 'user'"
-  [class.bot-message]="message.type === 'bot'">
+<div class="message-container" [class.user-message]="message.role === 'user'"
+  [class.bot-message]="message.role === 'assistant'">
   <div class="message-content">
     <div [innerHTML]="processedContent"></div>
   </div>
