--- a/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
+++ b/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
@@ -5,13 +5,13 @@
       </app-message>
     }
 
-    @if (isTyping) {
+    <!-- @if (isTyping) {
       <div class="typing-indicator">
         <div class="typing-content">
           <span class="typing-text">Orasis is thinking</span>
           <span class="loading-dots"></span>
         </div>
       </div>
-    }
+    } -->
   </div>
 </div>
