--- a/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
+++ b/webview-chat/src/app/container/chat-container/message-list/message-list.component.html
@@ -1,17 +1,8 @@
 <div class="message-list-container" #messageContainer>
   <div class="messages">
-    @for (message of messages; track trackByMessageId($index, message)) {
+    @for (message of messages; track message.id) {
       <app-message [message]="message">
       </app-message>
     }
-
-    <!-- @if (isTyping) {
-      <div class="typing-indicator">
-        <div class="typing-content">
-          <span class="typing-text">Orasis is thinking</span>
-          <span class="loading-dots"></span>
-        </div>
-      </div>
-    } -->
   </div>
 </div>
