--- a/webview-chat/src/app/container/chat-container/message/message.component.scss
+++ b/webview-chat/src/app/container/chat-container/message/message.component.scss
@@ -8,7 +8,7 @@
 }
 
 .user-message .message-content {
-  background-color: #0084ff;
+  background-color: #22415e;
   color: white;
   max-width: 70%;
   padding: 12px 16px;
@@ -19,7 +19,6 @@
   max-width: 85%;
   padding: 16px;
   border-radius: 4px 18px 18px 18px;
-  border-left: 1px solid #0084ff;
 }
 
 .message-content {
