--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.scss
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.scss
@@ -20,6 +20,7 @@
   background-color: #2d2d2d;
   color: var(--vscode-editor-foreground);
   border-radius: 5px;
+  min-width: 120px ;
 }
 
 .select-models-field:focus{
