--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -1,4 +1,4 @@
-<mat-card class="message-input-container">
+<mat-card class="message-input-container" [class.border-animated]="isLoading">
   <div class="input-wrapper">
     <div appearance="outline" class="message-field">
       <textarea matInput [(ngModel)]="messageText" [placeholder]="placeholder" [disabled]="isLoading"
@@ -9,29 +9,29 @@
 
   </div>
   <mat-card-actions>
-    <div>
-      <select [(ngModel)]="modelText" class="select-models-field" [disabled]="isLoading">
-        @for (model of this.chatStore.models()?.models; track model) {
-        <option [ngValue]="model.model">{{model.name}}</option>
-        }
-      </select>
-    </div>
-    <div>
-    </div>
-    <div>
-      <button [class]="{'active-microphone': true,  'is-active': this.isActiveMicrophone }" matMiniFab
-        (click)="activeMicrophone()" [disabled]="isLoading || !modelText.trim()">
-        <ng-icon name="matMicOutline" />
-      </button>
-      <button matMiniFab class="send-button" [disabled]="!messageText.trim() || isLoading || modelText.length === 0"
-        (click)="sendMessage()">
-        @if (!isLoading) {
-        <ng-icon name="matSendOutline" />
-        }
-        @if (isLoading) {
-        <ng-icon class="loading-icon" name="matHourglassEmptyOutline" />
-        }
-      </button>
-    </div>
+      <div>
+        <select [(ngModel)]="modelText" class="select-models-field" [disabled]="isLoading">
+          @for (model of this.chatStore.models()?.models; track model) {
+          <option [ngValue]="model.model">{{model.name}}</option>
+          }
+        </select>
+      </div>
+      <div>
+      </div>
+      <div>
+        <button [class]="{'active-microphone': true,  'is-active': this.isActiveMicrophone }" matMiniFab
+          (click)="activeMicrophone()" [disabled]="isLoading || !modelText.trim()">
+          <ng-icon name="matMicOutline" />
+        </button>
+        <button matMiniFab class="send-button" [disabled]="!messageText.trim() || isLoading || modelText.length === 0"
+          (click)="sendMessage()">
+          @if (!isLoading) {
+          <ng-icon name="matSendOutline" />
+          }
+          @if (isLoading) {
+          <ng-icon class="loading-icon" name="matHourglassEmptyOutline" />
+          }
+        </button>
+      </div>
   </mat-card-actions>
 </mat-card>
