--- a/webview-chat/src/styles.scss
+++ b/webview-chat/src/styles.scss
@@ -24,7 +24,19 @@ html {
   ));
 }
 
+html, body {
+  scrollbar-width: thin;
+}
 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--vscode-scrollbarSlider-background);
+  border-radius: 3px;
+}
 
 body {
   // Default the application to a light color theme. This can be changed to
