update code styles

--- a/webview-chat/src/app/container/chat-container/message/message.component.scss
+++ b/webview-chat/src/app/container/chat-container/message/message.component.scss
@@ -7,7 +7,7 @@
 }
 
 .user-message .message-content {
-  background-color: #22415e;
+  background-color: #1b3955;
   color: white;
   max-width: 70%;
   padding: 12px 16px;
