--- a/webview-chat/src/styles.scss
+++ b/webview-chat/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -14,17 +13,16 @@
 }
 
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: -5,
-  ));
+  @include mat.theme((color: (primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: -5,
+    ));
 }
 
-html, body {
+html,
+body {
   scrollbar-width: thin;
 }
 
@@ -43,6 +41,7 @@ body {
   // `dark` to enable the dark color theme, or to `light dark` to defer to the
   // user's system settings.
   color-scheme: light;
+  font-family: var(--vscode-editor-font-family);
 
   // Set a default background, font and text colors for the application using
   // Angular Material's system-level CSS variables. Learn more about these
@@ -64,7 +63,7 @@ body {
 
 
 
-code{
+code {
   background-color: transparent;
 }
 
@@ -74,13 +73,15 @@ pre.hljs {
   border: 1px solid var(--border-color);
   border-radius: 6px;
   padding: 1em;
-  font-family: 'Fira Code', monospace;
+  font-family: var(--vscode-editor-font-family);
   overflow-x: auto;
 }
 
 pre.hljs::-webkit-scrollbar {
-  height: 6px; /* horizontal scrollbar */
-  width: 6px;  /* vertical scrollbar */
+  height: 6px;
+  /* horizontal scrollbar */
+  width: 6px;
+  /* vertical scrollbar */
 }
 
 pre.hljs::-webkit-scrollbar-track {
@@ -99,8 +100,8 @@ pre.hljs::-webkit-scrollbar-thumb:hover {
 
 html {
   color-scheme: light dark;
-    // @include mat.theme((typography: Roboto,
-    //   density: -5));
+  // @include mat.theme((typography: Roboto,
+  //   density: -5));
 }
 
 body.vscode-dark {
