update ui look and feel webview chat angular and fixing command workspace

--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -2,8 +2,9 @@
   <div class="input-wrapper">
     <div appearance="outline" class="message-field">
       <textarea matInput [(ngModel)]="messageText" [placeholder]="placeholder" [disabled]="isLoading"
-        (keydown.enter)="onEnterPressed($event)" rows="3" #messageTextarea>
+        (keydown.enter)="onEnterPressed($event)" (keydown)="onKeyDown($event)" rows="3" #messageTextarea>
       </textarea>
+      <div id="fileDropdown" class="dropdown"></div>
     </div>
 
 
