--- a/webview-chat/src/app/container/chat-container/message-list/message-list.component.scss
+++ b/webview-chat/src/app/container/chat-container/message-list/message-list.component.scss
@@ -15,14 +15,9 @@
 .typing-indicator {
   margin: 16px 0;
   display: flex;
+  justify-content: center;
 }
 
-.typing-content {
-  padding: 12px 16px;
-  border-radius: 4px 18px 18px 18px;
-  border-left: 3px solid #0084ff;
-  font-style: italic;
-}
 
 .typing-text {
   margin-right: 8px;
